--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "bensampo/laravel-enum": "^1.32",
         "fideloper/proxy": "^4.0",
+        "jacobcyl/ali-oss-storage": "^2.1",
         "laravel/framework": "^6.2",
         "laravel/horizon": "^3.7",
         "laravel/tinker": "^2.0",
@@ -24,6 +25,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
+        "overtrue/laravel-query-logger": "^1.0",
         "phpunit/phpunit": "^8.0"
     },
     "config": {
