--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,10 @@ SMS_ALIYUN_SIGN_NAME=
 SMS_ALIYUN_ACCESS_KEY_ID=
 SMS_ALIYUN_ACCESS_KEY_SECRET=
 SMS_ALIYUN_TEMPLATE_REGISTER=
+
+# 阿里云OSS
+OSS_ALIYUN_ACCESS_ID=
+OSS_ALIYUN_ACCESS_KEY=
+OSS_ALIYUN_ACCESS_BUCKET=
+OSS_ALIYUN_ACCESS_ENDPOINT=
+OSS_ALIYUN_ACCESS_ENDPOINT_INTERNAL=
