--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "bensampo/laravel-enum": "^1.33",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "overtrue/easy-sms": "^1.1",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
