--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "overtrue/easy-sms": "^1.1",
+        "overtrue/laravel-lang": "~3.0",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
