--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "bensampo/laravel-enum": "^1.33",
         "fideloper/proxy": "^4.0",
+        "jacobcyl/ali-oss-storage": "^2.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "overtrue/easy-sms": "^1.1",
