--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "jacobcyl/ali-oss-storage": "^2.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "medz/cors": "^1.4",
         "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "~3.0",
         "tymon/jwt-auth": "^1.0"
