--- a/.env.example
+++ b/.env.example
@@ -52,7 +52,7 @@ SMS_ALIYUN_ACCESS_KEY_SECRET=
 SMS_ALIYUN_TEMPLATE_REGISTER=
 
 # 阿里云OSS
-OSS_ALIYUN_ACCESS_ID=
-OSS_ALIYUN_ACCESS_KEY=
-OSS_ALIYUN_ACCESS_BUCKET=
-OSS_ALIYUN_ACCESS_ENDPOINT=
+OSS_ACCESS_KEY=
+OSS_SECRET_KEY=
+OSS_BUCKET=
+OSS_ENDPOINT=
