--- a/composer.json
+++ b/composer.json
@@ -9,22 +9,24 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "bensampo/laravel-enum": "^1.33",
-        "dzcyr/laravel-regions": "1.1.8",
+        "bensampo/laravel-enum": "^1.32",
+        "dzcyr/laravel-regions": "^1.1",
         "fideloper/proxy": "^4.0",
-        "jacobcyl/ali-oss-storage": "^2.1",
+        "iidestiny/laravel-filesystem-oss": "^2.0",
         "laravel/framework": "^6.2",
+        "laravel/horizon": "^3.7",
         "laravel/tinker": "^2.0",
         "medz/cors": "^1.4",
         "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "~3.0",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "1.0.0-rc.5.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.9.1",
+        "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
+        "overtrue/laravel-query-logger": "^1.0",
         "phpunit/phpunit": "^8.0"
     },
     "config": {
@@ -44,9 +46,6 @@
         "classmap": [
             "database/seeds",
             "database/factories"
-        ],
-        "files": [
-            "app/helpers.php"
         ]
     },
     "autoload-dev": {
